contact form added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		  		<li> <a class="header__link" href="./pages/portfolio.html">Portfolio</a></li>
 		  		<li> <a class="header__link" href="#">Services</a></li>
 		  		<li> <a class="header__link" href="#">À propos</a></li>
-		  		<li> <a class="header__link" href="#">Contact</a></li>
+		  		<li> <a class="header__link" href="./pages/contact.html">Contact</a></li>
 		  	</ul>
 		  </nav>
 		  <button class="header__bars">
