contact form fixed

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -81,7 +81,8 @@
 				<h2 class="cs2r__title">
 					rendez vous
 				</h2>
-				<form method="post" action="../src/utils/send_email.php" class="cs2__right container">
+				<form action="https://api.web3forms.com/submit" method="POST" class="cs2__right container">
+					<input type="hidden" name="access_key" value="6886032e-7244-45e3-bd6c-7593fbdadf7d">
 					<div class="cs2r__section">
 						<label for="name">Name</label>
 						<input type="text" name="name" placeholder="your name" class="cs2r__inputs" required>
