--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,6 +82,8 @@
 					rendez vous
 				</h2>
 				<form action="https://api.web3forms.com/submit" method="POST" class="cs2__right container">
+  					<input type="hidden" name="from_name" value="WALLservice">
+  					<input type="hidden" name="subject" value="WALLservice contact form">
 					<input type="hidden" name="access_key" value="6886032e-7244-45e3-bd6c-7593fbdadf7d">
 					<div class="cs2r__section">
 						<label for="name">Name</label>
