--- a/pages/contact.html
+++ b/pages/contact.html
@@ -85,6 +85,7 @@
   					<input type="hidden" name="from_name" value="WALLservice">
   					<input type="hidden" name="subject" value="WALLservice contact form">
 					<input type="hidden" name="access_key" value="6886032e-7244-45e3-bd6c-7593fbdadf7d">
+  					<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 					<div class="cs2r__section">
 						<label for="name">Name</label>
 						<input type="text" name="name" placeholder="your name" class="cs2r__inputs" required>
