--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,14 +65,37 @@
 				  </div>
 				  <div class="cs2__left__list">
 					  <div class="cs2__left__minilist">
-						  <div class="cs2l__minilist__img">
-						  	
-						  </div>
+						  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="cs2l__minilist__icon">
+							  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+						  </svg>
 						  <div class="cs2l__minilist__content">
-							  <div class="cs2lm_title">
+							  <div class="cs2lm__title">
 								  phone
 							  </div>
-							  <a href="tel:0345566677">+261 34 55 666 77</a>
+							  <a href="tel:0345566677" class="cs2l__link">(+261) 34 55 666 77</a>
+						  </div>
+					  </div>
+					  <div class="cs2__left__minilist">
+						  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="cs2l__minilist__icon">
+							  <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+						  </svg>
+						  <div class="cs2l__minilist__content">
+							  <div class="cs2lm__title">
+								  email
+							  </div>
+							  <a href="mailto:example@somewhere.com" class="cs2l__link">example@mail.com</a>
+						  </div>
+					  </div>
+					  <div class="cs2__left__minilist">
+						  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="cs2l__minilist__icon">
+							  <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+							  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+						  </svg>
+						  <div class="cs2l__minilist__content">
+							  <div class="cs2lm__title">
+								  localization
+							  </div>
+							  <a href="#" class="cs2l__link">Antananarive</a>
 						  </div>
 					  </div>
 				  </div>
@@ -89,21 +112,23 @@
   					<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 					<div class="cs2r__section">
 						<label for="name">Name</label>
-						<input type="text" name="name" placeholder="your name" class="cs2r__inputs" required>
+						<input type="text" name="name" placeholder="name" class="cs2r__inputs" required>
 					</div>
 					<div class="cs2r__section">
 						<label for="email">Email</label>
-						<input type="email" name="email" placeholder="your email" class="cs2r__inputs" required>
+						<input type="email" name="email" placeholder="email" class="cs2r__inputs" required>
 					</div>
 					<div class="cs2r__section">
 						<label for="phone">Phone</label>
-						<input type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}-[0-9]{2}" name="phone" placeholder="your name" class="cs2r__inputs" required>
+						<input type="tel" id="phone" pattern="[0-9]{10}" name="phone" placeholder="phome" class="cs2r__inputs" required>
 					</div>
 					<div class="cs2r__section">
 						<label for="message">Message</label>
-						<textarea name="message" id="message" placeholder="your Message" required></textarea>
+						<textarea name="message" id="message" placeholder="Message" class="cs2r__inputs__msg" required></textarea>
 					</div>
-					<button class="blue_btn custom_btn on_scroll">Send Message</button>
+					<div class="cs2r__btn">
+						<button class="blue_btn custom_btn on_scroll">Send Message</button>
+					</div>
 			  	</form>
 			  </div>
 		  </section>
