--- a/pages/services.html
+++ b/pages/services.html
@@ -6,7 +6,7 @@
     	<link rel="icon" type="image/x-icon" href="../public/favicon.ico" />
 		<link href="https://api.fontshare.com/v2/css?f[]=poppins@400,500,600,700&display=swap" rel="stylesheet">
 		<script type="module" src="../src/main.js"></script>
-		<title>Portfolio</title>
+		<title>Services</title>
 	</head>
 	<body>
 	  <header class="header container">
@@ -15,8 +15,8 @@
 		  </a>
 		  <nav>
 		  	<ul class="header__menu">
-		  		<li> <a class="header__link clr_red" href="#">Portfolio</a></li>
-		  		<li> <a class="header__link" href="./services.html">Services</a></li>
+		  		<li> <a class="header__link" href="./portfolio.html">Portfolio</a></li>
+		  		<li> <a class="header__link clr_red" href="#">Services</a></li>
 		  		<li> <a class="header__link" href="./a_propos.html">À propos</a></li>
 		  		<li> <a class="header__link" href="./contact.html">Contact</a></li>
 		  	</ul>
@@ -34,10 +34,10 @@
 		  <nav>
 		  	<ul class="mobile-nav__menu">
 				<li>
-					<a href="#" class="mobile-nav__link">Portfolio<a/>
+					<a href="./portfolio.html" class="mobile-nav__link">Portfolio<a/>
 				</li>
 				<li>
-					<a href="./services.html" class="mobile-nav__link">Services<a/>
+					<a href="#" class="mobile-nav__link">Services<a/>
 				</li>
 				<li>
 					<a href="./a_propos.html" class="mobile-nav__link">a propos<a/>
