--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,8 +16,8 @@
 		  <nav>
 		  	<ul class="header__menu">
 		  		<li> <a class="header__link" href="./portfolio.html">Portfolio</a></li>
-		  		<li> <a class="header__link" href="#">Services</a></li>
-		  		<li> <a class="header__link" href="#">À propos</a></li>
+		  		<li> <a class="header__link" href="./services.html">Services</a></li>
+		  		<li> <a class="header__link" href="./a_propos.html">À propos</a></li>
 		  		<li> <a class="header__link clr_red" href="#">Contact</a></li>
 		  	</ul>
 		  </nav>
@@ -34,13 +34,13 @@
 		  <nav>
 		  	<ul class="mobile-nav__menu">
 				<li>
-					<a href="#" class="mobile-nav__link">Portfolio<a/>
+					<a href="./portfolio.html" class="mobile-nav__link">Portfolio<a/>
 				</li>
 				<li>
-					<a href="#" class="mobile-nav__link">Services<a/>
+					<a href="./services.html" class="mobile-nav__link">Services<a/>
 				</li>
 				<li>
-					<a href="#" class="mobile-nav__link">a propos<a/>
+					<a href="./a_propos.html" class="mobile-nav__link">a propos<a/>
 				</li>
 				<li>
 					<a href="#" class="mobile-nav__link">Contact<a/>
@@ -64,7 +64,7 @@
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 				  </div>
 				  <div class="cs2__left__list">
-					  <div class="cs2__left__minilist">
+					  <div class="cs2__left__minilist on_scroll">
 						  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="cs2l__minilist__icon">
 							  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
 						  </svg>
@@ -75,7 +75,7 @@
 							  <a href="tel:0345566677" class="cs2l__link">(+261) 34 55 666 77</a>
 						  </div>
 					  </div>
-					  <div class="cs2__left__minilist">
+					  <div class="cs2__left__minilist on_scroll">
 						  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="cs2l__minilist__icon">
 							  <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
 						  </svg>
@@ -86,7 +86,7 @@
 							  <a href="mailto:example@somewhere.com" class="cs2l__link">example@mail.com</a>
 						  </div>
 					  </div>
-					  <div class="cs2__left__minilist">
+					  <div class="cs2__left__minilist on_scroll">
 						  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="cs2l__minilist__icon">
 							  <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
 							  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
