--- a/pages/a_propos.html
+++ b/pages/a_propos.html
@@ -64,7 +64,121 @@
 		  </nav>
 	  </div>
 	  <main>
-	  	<h1 class="container">hello there</h1>
+		  <section class="abt_us1 container">
+			  <h1 class="abt_us1__title">About us</h1>
+		  </section>
+		  <section class="abt_us2 container">
+			  <img src="../public/aboutus_banner.jpg" alt="" class="abt_us2__img">
+			  <div class="abt_us2__content">
+				  <p class="ab2c__top">WALservice</p>
+				  <p class="ab2c__title">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				  </p>
+				  <p class="ab2c__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						<br>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+				  </p>
+				  <div>
+				  	<button class="blue_btn custom_btn">CALL US TODAY</button>
+				  </div>
+			  </div>
+		  </section>
+		  <section class="abt_us3 container">
+			  <div class="abt3__s1">
+				  <div class="abt3__s1__left">
+					  <p class="abt3__s1__left__top">our work prosess</p>
+					  <p class="abt3__s1__left__buttom">we take care of everything</p>
+				  </div>
+				  <p class="abt3__s1__right">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+				  </p>
+			  </div>
+			  <div class="abt3__s2">
+				  <div class="abt3__s2__card">
+					  <p class="abt3__s2__card__top">theme</p>
+					  <p class="abt3__s2__card__title">Lorem ipsum dolor sit amet</p>
+					  <p class="abt3__s2__card__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+					  </p>
+				  </div>
+				  <div class="abt3__s2__card">
+					  <p class="abt3__s2__card__top">theme</p>
+					  <p class="abt3__s2__card__title">Lorem ipsum dolor sit amet</p>
+					  <p class="abt3__s2__card__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+					  </p>
+				  </div>
+				  <div class="abt3__s2__card">
+					  <p class="abt3__s2__card__top">theme</p>
+					  <p class="abt3__s2__card__title">Lorem ipsum dolor sit amet</p>
+					  <p class="abt3__s2__card__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+					  </p>
+				  </div>
+			  </div>
+		  </section>
+		  <section class="abt_us4 container">
+			  <div class="abt4__s1">
+				  <p class="abt4__s1__top">Our team</p>
+				  <p class="abt4__s1__title">the people behind WALservice</p>
+				  <p class="abt4__s1__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+				  </p>
+			  </div>
+			  <div class="abt4__s2">
+				  <div>
+					  <div class="abt4__s2__card">
+						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
+						  <div class="abt4__s2__card__content">
+							  <p class="abt4__s2__card__name">Alice Johnson</p>
+							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
+						  </div>
+					  </div>
+					  <div class="abt4__s2__card">
+						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
+						  <div class="abt4__s2__card__content">
+							  <p class="abt4__s2__card__name">Alice Johnson</p>
+							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
+						  </div>
+					  </div>
+					  <div class="abt4__s2__card">
+						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
+						  <div class="abt4__s2__card__content">
+							  <p class="abt4__s2__card__name">Alice Johnson</p>
+							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
+						  </div>
+					  </div>
+				  </div>
+				  <div>
+					  <div class="abt4__s2__card">
+						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
+						  <div class="abt4__s2__card__content">
+							  <p class="abt4__s2__card__name">Alice Johnson</p>
+							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
+						  </div>
+					  </div>
+					  <div class="abt4__s2__card">
+						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
+						  <div class="abt4__s2__card__content">
+							  <p class="abt4__s2__card__name">Alice Johnson</p>
+							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
+						  </div>
+					  </div>
+					  <div class="abt4__s2__card">
+						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
+						  <div class="abt4__s2__card__content">
+							  <p class="abt4__s2__card__name">Alice Johnson</p>
+							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
+						  </div>
+					  </div>
+				  </div>
+			  </div>
+		  </section>
 	  </main>
 	  <footer class="footer container section">
 		<h2 class="footer__title">© 2025 WAL Services. All rights reserved.</h2>
