--- a/pages/contact.html
+++ b/pages/contact.html
@@ -87,7 +87,7 @@
 							  <div class="cs2lm__title">
 								  phone
 							  </div>
-							  <a href="tel:0345566677" class="cs2l__link">(+261) 34 55 666 77</a>
+							  <a href="tel:0340821676" class="cs2l__link">(+261) 34 08 216 76</a>
 						  </div>
 					  </div>
 					  <div class="cs2__left__minilist on_scroll">
@@ -135,7 +135,7 @@
 					</div>
 					<div class="cs2r__section">
 						<label for="phone">Phone</label>
-						<input type="tel" id="phone" pattern="[0-9]{10}" name="phone" placeholder="phome" class="cs2r__inputs" required>
+						<input type="tel" id="phone" pattern="[0-9]{10}" name="phone" placeholder="phone" class="cs2r__inputs" required>
 					</div>
 					<div class="cs2r__section">
 						<label for="message">Message</label>
