--- a/pages/a_propos.html
+++ b/pages/a_propos.html
@@ -131,7 +131,7 @@
 				  </p>
 			  </div>
 			  <div class="abt4__s2">
-				  <div>
+				  <div class="abt4__s2__bigcard">
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
 						  <div class="abt4__s2__card__content">
@@ -154,7 +154,7 @@
 						  </div>
 					  </div>
 				  </div>
-				  <div>
+				  <div class="abt4__s2__bigcard">
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
 						  <div class="abt4__s2__card__content">
