--- a/pages/a_propos.html
+++ b/pages/a_propos.html
@@ -82,7 +82,7 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
 				  <div>
-				  	<button class="blue_btn custom_btn">CALL US TODAY</button>
+				  	<button class="blue_btn custom_btn on_scroll">CALL US TODAY</button>
 				  </div>
 			  </div>
 		  </section>
@@ -134,21 +134,21 @@
 				  <div class="abt4__s2__bigcard">
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
-						  <div class="abt4__s2__card__content">
+						  <div class="abt4__s2__card__content on_scroll">
 							  <p class="abt4__s2__card__name">Alice Johnson</p>
 							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
 						  </div>
 					  </div>
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
-						  <div class="abt4__s2__card__content">
+						  <div class="abt4__s2__card__content on_scroll">
 							  <p class="abt4__s2__card__name">Alice Johnson</p>
 							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
 						  </div>
 					  </div>
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
-						  <div class="abt4__s2__card__content">
+						  <div class="abt4__s2__card__content on_scroll">
 							  <p class="abt4__s2__card__name">Alice Johnson</p>
 							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
 						  </div>
@@ -157,21 +157,21 @@
 				  <div class="abt4__s2__bigcard">
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
-						  <div class="abt4__s2__card__content">
+						  <div class="abt4__s2__card__content on_scroll">
 							  <p class="abt4__s2__card__name">Alice Johnson</p>
 							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
 						  </div>
 					  </div>
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
-						  <div class="abt4__s2__card__content">
+						  <div class="abt4__s2__card__content on_scroll">
 							  <p class="abt4__s2__card__name">Alice Johnson</p>
 							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
 						  </div>
 					  </div>
 					  <div class="abt4__s2__card">
 						  <img class="abt4__s2__card__img" src="../public/pdp.webp" alt="image">
-						  <div class="abt4__s2__card__content">
+						  <div class="abt4__s2__card__content on_scroll">
 							  <p class="abt4__s2__card__name">Alice Johnson</p>
 							  <p class="abt4__s2__card__job">Customer Relations Specialist</p>
 						  </div>
