--- a/pages/services.html
+++ b/pages/services.html
@@ -64,7 +64,85 @@
 		  </nav>
 	  </div>
 	  <main>
-	  	<h1 class="container">hello there</h1>
+		  <section class="abt_us1 container">
+			  <h1 class="abt_us1__title">Services</h1>
+		  </section>
+		  <section class="abt_us2 container">
+			  <img src="../public/service_img1.webp" alt="" class="abt_us2__img">
+			  <div class="abt_us2__content">
+				  <p class="ab2c__top">minitopper</p>
+				  <p class="ab2c__title">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				  </p>
+				  <p class="ab2c__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						<br>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+				  </p>
+				  <div>
+				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  </div>
+			  </div>
+		  </section>
+		  <section class="abt_us2 reverse_section container">
+			  <img src="../public/service_img2.avif" alt="" class="abt_us2__img">
+			  <div class="abt_us2__content">
+				  <p class="ab2c__top">minitopper</p>
+				  <p class="ab2c__title">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				  </p>
+				  <p class="ab2c__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						<br>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+				  </p>
+				  <div>
+				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  </div>
+			  </div>
+		  </section>
+		  <section class="abt_us2 container">
+			  <img src="../public/service_img1.webp" alt="" class="abt_us2__img">
+			  <div class="abt_us2__content">
+				  <p class="ab2c__top">minitopper</p>
+				  <p class="ab2c__title">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				  </p>
+				  <p class="ab2c__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						<br>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+				  </p>
+				  <div>
+				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  </div>
+			  </div>
+		  </section>
+		  <section class="abt_us2 reverse_section container">
+			  <img src="../public/service_img2.avif" alt="" class="abt_us2__img">
+			  <div class="abt_us2__content">
+				  <p class="ab2c__top">minitopper</p>
+				  <p class="ab2c__title">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				  </p>
+				  <p class="ab2c__content">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						<br>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+				  </p>
+				  <div>
+				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  </div>
+			  </div>
+		  </section>
 	  </main>
 	  <footer class="footer container section">
 		<h2 class="footer__title">© 2025 WAL Services. All rights reserved.</h2>
