--- a/pages/services.html
+++ b/pages/services.html
@@ -71,7 +71,7 @@
 			  <img src="../public/service_img1.webp" alt="" class="abt_us2__img">
 			  <div class="abt_us2__content">
 				  <p class="ab2c__top">minitopper</p>
-				  <p class="ab2c__title">
+				  <p class="ab2c__title on_scroll">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				  </p>
 				  <p class="ab2c__content">
@@ -108,18 +108,18 @@
 		  <section class="abt_us2 container">
 			  <img src="../public/service_img1.webp" alt="" class="abt_us2__img">
 			  <div class="abt_us2__content">
-				  <p class="ab2c__top">minitopper</p>
-				  <p class="ab2c__title">
+				  <p class="ab2c__top on_scroll">minitopper</p>
+				  <p class="ab2c__title on_scroll">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				  </p>
-				  <p class="ab2c__content">
+				  <p class="ab2c__content on_scroll">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						<br>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
-				  <div>
+				  <div class="on_scroll">
 				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
 				  </div>
 			  </div>
