portfolio page added

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -64,7 +64,137 @@
 		  </nav>
 	  </div>
 	  <main>
-	  	<h1 class="container">hello there</h1>
+		  <section class="abt_us1 container">
+			  <h1 class="abt_us1__title">our work</h1>
+		  </section>
+		  <section class="pf_section container">
+			  <div class="lol_pf">
+				  <a href="./services.html" class="pf_card">
+					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
+						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+					  </svg>
+					  <p class="pf_card__title">template title</p>
+					  <div class="pf_card__content">
+						  <div class="pf_card__box1">
+							  <p class="pf_card__minititle">Mini Title</p>
+							  <p class="pf_card__text">
+						  		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+							  </p>
+						  </div>
+						  <a href="./contact.html">
+							  <button class="white_btn custom_btn on_scroll pf_btn">contact</button>
+						  </a>
+					  </div>
+				  </a>
+			  </div>
+			  <div class="lol_pf pf_right">
+				  <a href="./services.html" class="pf_card">
+					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
+						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+					  </svg>
+					  <p class="pf_card__title">template title</p>
+					  <div class="pf_card__content">
+						  <div class="pf_card__box1">
+							  <p class="pf_card__minititle">Mini Title</p>
+							  <p class="pf_card__text">
+						  		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+							  </p>
+						  </div>
+						  <a href="./contact.html">
+							  <button class="white_btn custom_btn on_scroll pf_btn">contact</button>
+						  </a>
+					  </div>
+				  </a>
+			  </div>
+		  </section>
+		  <section class="pf_section container">
+			  <div class="lol_pf">
+				  <a href="./services.html" class="pf_card">
+					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
+						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+					  </svg>
+					  <p class="pf_card__title">template title</p>
+					  <div class="pf_card__content">
+						  <div class="pf_card__box1">
+							  <p class="pf_card__minititle">Mini Title</p>
+							  <p class="pf_card__text">
+						  		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+							  </p>
+						  </div>
+						  <a href="./contact.html">
+							  <button class="white_btn custom_btn on_scroll pf_btn">contact</button>
+						  </a>
+					  </div>
+				  </a>
+			  </div>
+			  <div class="lol_pf pf_right">
+				  <a href="./services.html" class="pf_card">
+					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
+						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+					  </svg>
+					  <p class="pf_card__title">template title</p>
+					  <div class="pf_card__content">
+						  <div class="pf_card__box1">
+							  <p class="pf_card__minititle">Mini Title</p>
+							  <p class="pf_card__text">
+						  		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+							  </p>
+						  </div>
+						  <a href="./contact.html">
+							  <button class="white_btn custom_btn on_scroll pf_btn">contact</button>
+						  </a>
+					  </div>
+				  </a>
+			  </div>
+		  </section>
+		  <section class="pf_section container">
+			  <div class="lol_pf">
+				  <a href="./services.html" class="pf_card">
+					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
+						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+					  </svg>
+					  <p class="pf_card__title">template title</p>
+					  <div class="pf_card__content">
+						  <div class="pf_card__box1">
+							  <p class="pf_card__minititle">Mini Title</p>
+							  <p class="pf_card__text">
+						  		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+							  </p>
+						  </div>
+						  <a href="./contact.html">
+							  <button class="white_btn custom_btn on_scroll pf_btn">contact</button>
+						  </a>
+					  </div>
+				  </a>
+			  </div>
+			  <div class="lol_pf pf_right">
+				  <a href="./services.html" class="pf_card">
+					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
+						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+					  </svg>
+					  <p class="pf_card__title">template title</p>
+					  <div class="pf_card__content">
+						  <div class="pf_card__box1">
+							  <p class="pf_card__minititle">Mini Title</p>
+							  <p class="pf_card__text">
+						  		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
+							  </p>
+						  </div>
+						  <a href="./contact.html">
+							  <button class="white_btn custom_btn on_scroll pf_btn">contact</button>
+						  </a>
+					  </div>
+				  </a>
+			  </div>
+		  </section>
+		  <br>
+		  <br>
 	  </main>
 	  <footer class="footer container section">
 		<h2 class="footer__title">© 2025 WAL Services. All rights reserved.</h2>
