--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -70,7 +70,10 @@
 		  <section class="pf_section container">
 			  <div class="lol_pf">
 				  <a href="./services.html" class="pf_card">
-					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <div class="pf_imgbox">
+						  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  </div>
+					  <!-- <img class="pf_card__img" src="../public/work2.webp" alt=""> -->
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
 						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
 					  </svg>
@@ -90,7 +93,10 @@
 			  </div>
 			  <div class="lol_pf pf_right">
 				  <a href="./services.html" class="pf_card">
-					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <div class="pf_imgbox">
+						  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  </div>
+					  <!-- <img class="pf_card__img" src="../public/work2.webp" alt=""> -->
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
 						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
 					  </svg>
@@ -112,7 +118,10 @@
 		  <section class="pf_section container">
 			  <div class="lol_pf">
 				  <a href="./services.html" class="pf_card">
-					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <div class="pf_imgbox">
+						  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  </div>
+					  <!-- <img class="pf_card__img" src="../public/work2.webp" alt=""> -->
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
 						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
 					  </svg>
@@ -132,7 +141,10 @@
 			  </div>
 			  <div class="lol_pf pf_right">
 				  <a href="./services.html" class="pf_card">
-					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <div class="pf_imgbox">
+						  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  </div>
+					  <!-- <img class="pf_card__img" src="../public/work2.webp" alt=""> -->
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
 						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
 					  </svg>
@@ -154,7 +166,10 @@
 		  <section class="pf_section container">
 			  <div class="lol_pf">
 				  <a href="./services.html" class="pf_card">
-					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <div class="pf_imgbox">
+						  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  </div>
+					  <!-- <img class="pf_card__img" src="../public/work2.webp" alt=""> -->
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
 						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
 					  </svg>
@@ -174,7 +189,9 @@
 			  </div>
 			  <div class="lol_pf pf_right">
 				  <a href="./services.html" class="pf_card">
-					  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  <div class="pf_imgbox">
+						  <img class="pf_card__img" src="../public/work2.webp" alt="">
+					  </div>
 					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="pf_theline">
 						  <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
 					  </svg>
