--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -65,7 +65,7 @@
 	  </div>
 	  <main>
 		  <section class="abt_us1 container">
-			  <h1 class="abt_us1__title">our work</h1>
+			  <h1 class="abt_us1__title">our works</h1>
 		  </section>
 		  <section class="pf_section container">
 			  <div class="lol_pf">
