--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 		  </a>
 		  <nav>
 		  	<ul class="header__menu">
-		  		<li> <a class="header__link" href="./pages/portfolio.html">Portfolio</a></li>
 		  		<li> <a class="header__link" href="./pages/services.html">Services</a></li>
 		  		<li> <a class="header__link" href="./pages/a_propos.html">À propos</a></li>
 		  		<li> <a class="header__link" href="./pages/contact.html">Contact</a></li>
@@ -43,9 +42,6 @@
 		  <nav>
 		  	<ul class="mobile-nav__menu">
 				<li>
-					<a href="./pages/portfolio.html" class="mobile-nav__link">Portfolio<a/>
-				</li>
-				<li>
 					<a href="./pages/services.html" class="mobile-nav__link">Services<a/>
 				</li>
 				<li>
@@ -70,7 +66,7 @@
 			<div class="hero__box">
 				<h1 class="mini__hero hero__title">Build the future</h1>
 				<p class="mini__hero hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit, accumsan lacinia imperdiet eget, posuere scelerisque urna. Aenean suscipit enim vel magna mattis, sit amet fringilla nibh auctor. </p>
-				<a href="./pages/portfolio.html">
+				<a href="./pages/services.html">
 					<button class="mini__hero hero__calltoaction custom_btn blue_btn on_scroll">
 						Learn More
 					</button>
