--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
 		  </a>
 		  <nav>
 		  	<ul class="header__menu">
-		  		<li> <a class="header__link" href="./portfolio.html">Portfolio</a></li>
+		  		<!-- <li> <a class="header__link" href="./portfolio.html">Portfolio</a></li> -->
 		  		<li> <a class="header__link" href="./services.html">Services</a></li>
 		  		<li> <a class="header__link" href="./a_propos.html">À propos</a></li>
 		  		<li> <a class="header__link clr_red" href="#">Contact</a></li>
@@ -40,9 +40,9 @@
 	  <div class="mobile-nav">
 		  <nav>
 		  	<ul class="mobile-nav__menu">
-				<li>
-					<a href="./portfolio.html" class="mobile-nav__link">Portfolio<a/>
-				</li>
+				<!-- <li> -->
+				<!-- 	<a href="./portfolio.html" class="mobile-nav__link">Portfolio<a/> -->
+				<!-- </li> -->
 				<li>
 					<a href="./services.html" class="mobile-nav__link">Services<a/>
 				</li>
