--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
 	  <main>
 	  	<section class="hero container">
 			<div class="hero__box">
-				<h1 class="mini__hero hero__title">Build the future</h1>
-				<p class="mini__hero hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit, accumsan lacinia imperdiet eget, posuere scelerisque urna. Aenean suscipit enim vel magna mattis, sit amet fringilla nibh auctor. </p>
+				<h1 class="mini__hero hero__title">
+					Construisons l’avenir ensemble !
+				</h1>
+				<p class="mini__hero hero__text">
+				Bienvenue chez WAL Services, votre partenaire d’assistanat virtuel dédié au marketing et au commerce. Avec une équipe d’experts polyvalents, nous vous aidons à optimiser vos opérations, booster votre productivité et maximiser vos ventes. Simplifiez votre gestion et concentrez-vous sur votre croissance, nous nous occupons du reste !
+				</p>
 				<a href="./pages/services.html">
 					<button class="mini__hero hero__calltoaction custom_btn blue_btn on_scroll">
 						Learn More
@@ -75,8 +79,12 @@
 			<img class="hero__image" src="./public/team.svg" alt="hero_svg">
 		</section>
 		<section class="boxtwo container">
-			<h2 class="on_scroll from_top boxtwo__title">Our Commitment<br/> to Excellence</h2>
-			<p class="on_scroll from_bottom boxtwo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus lorem ipsum, eu volutpat orci dictum nec. Curabitur leo velit</p>
+			<h2 class="on_scroll from_top boxtwo__title">
+				Notre Engagement envers <br> l'Excellence
+			</h2>
+			<p class="on_scroll from_bottom boxtwo__text">
+				Chez WAL Services, nous plaçons l’excellence au cœur de nos services pour vous offrir un accompagnement sur mesure, efficace et fiable. Nos valeurs fondamentales guident chacune de nos actions afin de garantir votre satisfaction et la réussite de vos projets.
+			</p>
 		</section>	
 	  	<section class="cardsection container">
 			<a href="./pages/services.html" class="card container">
