--- a/pages/a_propos.html
+++ b/pages/a_propos.html
@@ -40,13 +40,13 @@
 		  <nav>
 		  	<ul class="mobile-nav__menu">
 				<li>
-					<a href="./services.html" class="mobile-nav__link">Services<a/>
+					<a href="./services.html" class="mobile-nav__link">Services</a>
 				</li>
 				<li>
-					<a href="#" class="mobile-nav__link">a propos<a/>
+					<a href="#" class="mobile-nav__link">a propos</a>
 				</li>
 				<li>
-					<a href="./contact.html" class="mobile-nav__link">Contact<a/>
+					<a href="./contact.html" class="mobile-nav__link">Contact</a>
 				</li>
 				<br><hr><br>
 				<li>
@@ -77,9 +77,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
-				  <div>
-				  	<button class="blue_btn custom_btn on_scroll">CALL US TODAY</button>
-				  </div>
+				  <a href="./contact.html">
+					  <button class="blue_btn custom_btn on_scroll">CALL US TODAY</button>
+				  </a>
 			  </div>
 		  </section>
 		  <section class="abt_us3 container">
