--- a/pages/services.html
+++ b/pages/services.html
@@ -63,24 +63,41 @@
 		  <section class="abt_us1 container">
 			  <h1 class="abt_us1__title">Services</h1>
 		  </section>
+				  </a>
 		  <section class="abt_us2 container">
 			  <img src="../public/service_img1.webp" alt="" class="abt_us2__img">
 			  <div class="abt_us2__content">
-				  <p class="ab2c__top">minitopper</p>
+				  <p class="ab2c__top on_scroll">minitopper</p>
 				  <p class="ab2c__title on_scroll">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				  </p>
-				  <p class="ab2c__content">
+				  <p class="ab2c__content on_scroll">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						<br>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
-				  <div>
+				  <a href="./contact.html">
 				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
-				  </div>
+				  </a>
 			  </div>
+			  <!-- <div class="abt_us2__content"> -->
+			  <!--  <p class="ab2c__top">minitopper</p> -->
+			  <!--  <p class="ab2c__title on_scroll"> -->
+			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. -->
+			  <!--  </p> -->
+			  <!--  <p class="ab2c__content"> -->
+			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
+			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
+			  <!-- 	<br> -->
+			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
+			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
+			  <!--  </p> -->
+			  <!--  <a href="./contact.html"> -->
+			  <!--  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button> -->
+			  <!--  </a> -->
+			  <!-- </div> -->
 		  </section>
 		  <section class="abt_us2 reverse_section container">
 			  <img src="../public/service_img2.avif" alt="" class="abt_us2__img">
@@ -96,9 +113,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
-				  <div>
+				  <a href="./contact.html">
 				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
-				  </div>
+				  </a>
 			  </div>
 		  </section>
 		  <section class="abt_us2 container">
@@ -115,9 +132,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
-				  <div class="on_scroll">
+				  <a href="./contact.html">
 				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
-				  </div>
+				  </a>
 			  </div>
 		  </section>
 		  <section class="abt_us2 reverse_section container">
@@ -134,9 +151,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
-				  <div>
+				  <a href="./contact.html">
 				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
-				  </div>
+				  </a>
 			  </div>
 		  </section>
 	  </main>
